--- a/glide.yaml
+++ b/glide.yaml
@@ -1,6 +1,7 @@
-package: .
+package: github.com/t11e/go-centralclient
 import:
 - package: github.com/pkg/errors
   version: ~>0.2.0
 - package: github.com/stretchr/testify
   version: 1.1.x
+- package: github.com/t11e/go-pebbleclient
